[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vace"
version = "1.0.0"
description = "VACE: All-in-One Video Creation and Editing"
authors = [
    { name = "VACE Team", email = "wan.ai@alibabacloud.com" }
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "gradio>=5.0.0",
    "numpy>=1.23.5,<2",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "dashscope",
    "imageio-ffmpeg",
    "flash_attn",
    "decord",
    "einops",
    "scikit-image",
    "scikit-learn",
    "pycocotools",
    "ltx-video@git+https://github.com/Lightricks/LTX-Video@ltx-video-0.9.1",
    "wan@git+https://github.com/Wan-Video/Wan2.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "huggingface-hub[cli]"
]

[project.urls]
homepage = "https://ali-vilab.github.io/VACE-Page/"
documentation = "https://ali-vilab.github.io/VACE-Page/"
repository = "https://github.com/ali-vilab/VACE"

[tool.setuptools]
packages = { find = {} }

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true